--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "workflow-sass",
+  "name": "sass",
   "version": "1.0.0",
-  "description": "workflow com sass",
+  "description": "",
   "main": "gulpfile.js",
+  "dependencies": {
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-sass": "^3.0.0",
+    "gulp-uglify": "^2.0.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "sass",
-    "curso",
-    "certificação",
-    "bootstrap"
-  ],
-  "author": "Evandro Melos",
-  "license": "MIT",
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-sass": "^3.0.0"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xavero-evandro/sass.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/xavero-evandro/sass/issues"
+  },
+  "homepage": "https://github.com/xavero-evandro/sass#readme"
 }
